[package]
name = "skv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.5"
proptest = "1.0.0"

[[bench]]
name = "my_benchmark"
harness = false
