[package]
name = "skv"
version = "0.1.0"
edition = "2021"
description = "A simple thread-safe disk-backed key-value store"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.5"
proptest = "1.0.0"

[[bench]]
name = "my_benchmark"
harness = false
